add gallery content v1

--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,12 @@
 		
 		<link href="./_app/immutable/assets/0.B6kGYNV2.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/8.B4ZYfR6g.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Cmm4Jkle.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/p1rRz1rB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.-kmFNePL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BLIRuYMg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.tE29_Z_L.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DQ1RPj2E.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
@@ -31,15 +31,15 @@
 			
 			<script>
 				{
-					__sveltekit_1wo692u = {
+					__sveltekit_2e500l = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Cmm4Jkle.js"),
-						import("./_app/immutable/entry/app.tE29_Z_L.js")
+						import("./_app/immutable/entry/start.-kmFNePL.js"),
+						import("./_app/immutable/entry/app.DQ1RPj2E.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
