--- a/projects/rado-graph.html
+++ b/projects/rado-graph.html
@@ -6,12 +6,12 @@
 		
 		<link href="../_app/immutable/assets/0.B6kGYNV2.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/9.DMRdq57i.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Cmm4Jkle.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/p1rRz1rB.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.-kmFNePL.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BLIRuYMg.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.tE29_Z_L.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DQ1RPj2E.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DRudpjA4.js">
@@ -19,7 +19,7 @@
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.D3bI8AUP.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/C4BzMkYb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/9.BSq1ut0y.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/9.CpeEJm7M.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/0EJCr53A.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CY8AB-us.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CBbuBPfZ.js">
@@ -32,15 +32,15 @@
 			
 			<script>
 				{
-					__sveltekit_1wo692u = {
+					__sveltekit_2e500l = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.Cmm4Jkle.js"),
-						import("../_app/immutable/entry/app.tE29_Z_L.js")
+						import("../_app/immutable/entry/start.-kmFNePL.js"),
+						import("../_app/immutable/entry/app.DQ1RPj2E.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
