update gallery thumbnails

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		
 		<link href="./_app/immutable/assets/0.B6kGYNV2.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.8zMdw3ag.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.-kmFNePL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLIRuYMg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D67MVU1i.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CWQLUn88.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DQ1RPj2E.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DvY3VM_f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
@@ -31,15 +31,15 @@
 			
 			<script>
 				{
-					__sveltekit_2e500l = {
+					__sveltekit_mk6cnl = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.-kmFNePL.js"),
-						import("./_app/immutable/entry/app.DQ1RPj2E.js")
+						import("./_app/immutable/entry/start.D67MVU1i.js"),
+						import("./_app/immutable/entry/app.DvY3VM_f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
