--- a/gallery.html
+++ b/gallery.html
@@ -5,13 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.B6kGYNV2.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/6.BNVjAkoy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D67MVU1i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CWQLUn88.js">
+		<link href="./_app/immutable/assets/6.D3kxEdnU.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BJTjNa-1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DVvflwJQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DvY3VM_f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D0VOwzXB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
@@ -19,7 +19,7 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D3bI8AUP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C4BzMkYb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.5edGK56t.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.BI3pKSea.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CU9W_vW1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_Njmxhn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BLLkLrlF.js">
@@ -31,15 +31,15 @@
 			
 			<script>
 				{
-					__sveltekit_mk6cnl = {
+					__sveltekit_2rzg0s = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D67MVU1i.js"),
-						import("./_app/immutable/entry/app.DvY3VM_f.js")
+						import("./_app/immutable/entry/start.BJTjNa-1.js"),
+						import("./_app/immutable/entry/app.D0VOwzXB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
