--- a/about.html
+++ b/about.html
@@ -6,12 +6,12 @@
 		
 		<link href="./_app/immutable/assets/0.B6kGYNV2.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.BoM3YP60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BJTjNa-1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DVvflwJQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Xd7qhEG_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CKpBfkaB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D0VOwzXB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CTfd0eCh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
@@ -19,26 +19,23 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D3bI8AUP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C4BzMkYb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.Oh_z3riY.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.BzGWNfkE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CU9W_vW1.js"><!--12qhfyh--><link rel="icon" href="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='107'%20height='128'%20viewBox='0%200%20107%20128'%3e%3ctitle%3esvelte-logo%3c/title%3e%3cpath%20d='M94.157%2022.819c-10.4-14.885-30.94-19.297-45.792-9.835L22.282%2029.608A29.92%2029.92%200%200%200%208.764%2049.65a31.5%2031.5%200%200%200%203.108%2020.231%2030%2030%200%200%200-4.477%2011.183%2031.9%2031.9%200%200%200%205.448%2024.116c10.402%2014.887%2030.942%2019.297%2045.791%209.835l26.083-16.624A29.92%2029.92%200%200%200%2098.235%2078.35a31.53%2031.53%200%200%200-3.105-20.232%2030%2030%200%200%200%204.474-11.182%2031.88%2031.88%200%200%200-5.447-24.116'%20style='fill:%23ff3e00'/%3e%3cpath%20d='M45.817%20106.582a20.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.503%2018%2018%200%200%201%20.624-2.435l.49-1.498%201.337.981a33.6%2033.6%200%200%200%2010.203%205.098l.97.294-.09.968a5.85%205.85%200%200%200%201.052%203.878%206.24%206.24%200%200%200%206.695%202.485%205.8%205.8%200%200%200%201.603-.704L69.27%2076.28a5.43%205.43%200%200%200%202.45-3.631%205.8%205.8%200%200%200-.987-4.371%206.24%206.24%200%200%200-6.698-2.487%205.7%205.7%200%200%200-1.6.704l-9.953%206.345a19%2019%200%200%201-5.296%202.326%2020.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.502%2017.99%2017.99%200%200%201%208.13-12.052l26.081-16.623a19%2019%200%200%201%205.3-2.329%2020.72%2020.72%200%200%201%2022.237%208.243%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-.624%202.435l-.49%201.498-1.337-.98a33.6%2033.6%200%200%200-10.203-5.1l-.97-.294.09-.968a5.86%205.86%200%200%200-1.052-3.878%206.24%206.24%200%200%200-6.696-2.485%205.8%205.8%200%200%200-1.602.704L37.73%2051.72a5.42%205.42%200%200%200-2.449%203.63%205.79%205.79%200%200%200%20.986%204.372%206.24%206.24%200%200%200%206.698%202.486%205.8%205.8%200%200%200%201.602-.704l9.952-6.342a19%2019%200%200%201%205.295-2.328%2020.72%2020.72%200%200%201%2022.237%208.242%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-8.13%2012.053l-26.081%2016.622a19%2019%200%200%201-5.3%202.328'%20style='fill:%23fff'/%3e%3c/svg%3e"/><!----><!--cwls5q--><meta name="description" content="About aaron."/><!----><title>aaron — about</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-cwls5q"><section class="page svelte-cwls5q"><p class="eyebrow svelte-cwls5q">about</p> <h1 class="svelte-cwls5q">Intentional, minimal, serif.</h1> <p class="lede svelte-cwls5q">I work with calm typography, clear structure, and products that prefer restraint over noise. This
-			site is the simplest form of that: just enough to say hello.</p> <div class="body svelte-cwls5q"><p class="svelte-cwls5q">My work leans toward thoughtful pacing, accessible interfaces, and straightforward language. I
-				like durable tools that age well and avoid unnecessary complexity.</p> <p class="svelte-cwls5q">If you want to collaborate or compare notes, reach out anytime. I keep conversations concise
-				and focused on what matters most.</p></div></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-cwls5q"><section class="page svelte-cwls5q"><p class="eyebrow svelte-cwls5q">about</p> <h1 class="svelte-cwls5q">Get it done. Do it right.</h1> <p class="lede svelte-cwls5q">Another computer nerd with an interest in doing things the hard way.</p><div class="body svelte-cwls5q"><p class="svelte-cwls5q">Jack of many trades, master of none. I love learning about new technical concepts, digging in deep and then chasing the next rabbit down its hole. Over and over and over again.</p> <p class="svelte-cwls5q">I am self taught software engineer. Currently working as a forward deployed engineer for a small CH based RAG company. My day to day conists of building out AI tooling and back end solutions with our customers.</p> <p class="svelte-cwls5q">If you want to collaborate or compare notes, reach out anytime. I certainly have a lot to learn from you.</p></div></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_2rzg0s = {
+					__sveltekit_bi6coq = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BJTjNa-1.js"),
-						import("./_app/immutable/entry/app.D0VOwzXB.js")
+						import("./_app/immutable/entry/start.Xd7qhEG_.js"),
+						import("./_app/immutable/entry/app.CTfd0eCh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
