--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,12 @@
 		
 		<link href="./_app/immutable/assets/0.B6kGYNV2.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/8.B4ZYfR6g.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CXdfe8kX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/hZXCXXIQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CpAQfvsx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cu6bgXr2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CwPCTDqK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.rVradNCB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
@@ -30,15 +30,15 @@
 			
 			<script>
 				{
-					__sveltekit_1joqwjg = {
+					__sveltekit_bmzwm3 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CXdfe8kX.js"),
-						import("./_app/immutable/entry/app.CwPCTDqK.js")
+						import("./_app/immutable/entry/start.CpAQfvsx.js"),
+						import("./_app/immutable/entry/app.rVradNCB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
