--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
     
 		<link href="./_app/immutable/assets/0.PRcDW_11.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.BoM3YP60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B1nxiPn3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BbMx9pL6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CR1lkUpT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DkEGkgFV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BD0GllUK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CkRuD-Ac.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
@@ -42,15 +42,15 @@
 			
 			<script>
 				{
-					__sveltekit_1tmmiv2 = {
+					__sveltekit_w0ydqp = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B1nxiPn3.js"),
-						import("./_app/immutable/entry/app.BD0GllUK.js")
+						import("./_app/immutable/entry/start.CR1lkUpT.js"),
+						import("./_app/immutable/entry/app.CkRuD-Ac.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
