--- a/gallery/17000023.html
+++ b/gallery/17000023.html
@@ -21,12 +21,12 @@
     
 		<link href="../_app/immutable/assets/0.PRcDW_11.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/7.DEVTp7SO.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.B1nxiPn3.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BbMx9pL6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CR1lkUpT.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DkEGkgFV.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BD0GllUK.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.CkRuD-Ac.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DRudpjA4.js">
@@ -34,26 +34,25 @@
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.B_cDJ80w.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/C4BzMkYb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/7.M85ZgSCM.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/7.BRzXRbsm.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D6NXfYRl.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CBbuBPfZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BIiauZ2Q.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BQs9fFl7.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--s6jaqj--><meta name="description" content="Gallery frame 17000023."/><!----><title>Frame 17000023 — aaron</title>
+		<link rel="modulepreload" href="../_app/immutable/chunks/B3ucIb0_.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--s6jaqj--><meta name="description" content="Gallery frame 17000023."/><!----><title>Frame 17000023 — aaron</title>
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-s6jaqj"><article class="page svelte-s6jaqj"><div class="header"><p class="eyebrow svelte-s6jaqj">gallery</p> <h1 class="svelte-s6jaqj">Frame 17000023</h1> <p class="meta svelte-s6jaqj">Gallery frame 17000023.</p></div> <div class="image-section"><div class="frame svelte-s6jaqj"><picture class="svelte-s6jaqj"><source type="image/avif" srcset="/images/gallery/17000023-400.avif 400w, /images/gallery/17000023-800.avif 800w, /images/gallery/17000023-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw"/> <img src="/images/gallery/17000023-1200.avif" alt="Gallery frame 17000023." width="1200" height="795.5972806733571" loading="lazy" decoding="async" fetchpriority="low" style="aspect-ratio: 1.50830078125;" srcset="/images/gallery/17000023-400.avif 400w, /images/gallery/17000023-800.avif 800w, /images/gallery/17000023-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw" class="svelte-s6jaqj"/> <span class="placeholder svelte-s6jaqj">image</span></picture></div> <p class="full svelte-s6jaqj"><a href="/images/gallery/17000023.avif" rel="noreferrer" target="_blank" class="svelte-s6jaqj">Open full AVIF</a></p></div></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1tmmiv2 = {
+					__sveltekit_w0ydqp = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.B1nxiPn3.js"),
-						import("../_app/immutable/entry/app.BD0GllUK.js")
+						import("../_app/immutable/entry/start.CR1lkUpT.js"),
+						import("../_app/immutable/entry/app.CkRuD-Ac.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
