--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     
 		<link href="./_app/immutable/assets/0.PRcDW_11.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.OFUSIwvg.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B1nxiPn3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BbMx9pL6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CR1lkUpT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DkEGkgFV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BD0GllUK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CkRuD-Ac.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
@@ -34,27 +34,26 @@
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.B_cDJ80w.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C4BzMkYb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.VbWcl2Zj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Dij2sDHS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CU9W_vW1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_Njmxhn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BLLkLrlF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BIiauZ2Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BQs9fFl7.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--1uha8ag--><meta name="description" content="The minimal homepage for aaron."/><!----><title>aaron — homepage</title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/B3ucIb0_.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--1uha8ag--><meta name="description" content="The minimal homepage for aaron."/><!----><title>aaron — homepage</title>
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-1uha8ag"><section class="hero svelte-1uha8ag" aria-labelledby="name"><div class="hero-text svelte-1uha8ag"><p class="eyebrow svelte-1uha8ag">home</p> <h1 id="name" class="svelte-1uha8ag">aaron</h1> <nav aria-label="Primary" class="svelte-1uha8ag"><ul class="svelte-1uha8ag"><!--[--><li><a href="/about" class="svelte-1uha8ag"><span aria-hidden="true" class="line svelte-1uha8ag"></span> About</a></li><li><a href="/blog" class="svelte-1uha8ag"><span aria-hidden="true" class="line svelte-1uha8ag"></span> Blog</a></li><li><a href="/gallery" class="svelte-1uha8ag"><span aria-hidden="true" class="line svelte-1uha8ag"></span> Gallery</a></li><li><a href="/projects" class="svelte-1uha8ag"><span aria-hidden="true" class="line svelte-1uha8ag"></span> Projects</a></li><!--]--></ul></nav></div> <div class="hero-visual svelte-1uha8ag"><!--[!--><canvas class="voxel-canvas svelte-17tprnl" aria-label="Voxel pyramid" style="width:260px;height:260px;"></canvas><!--]--><!----></div></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1tmmiv2 = {
+					__sveltekit_w0ydqp = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B1nxiPn3.js"),
-						import("./_app/immutable/entry/app.BD0GllUK.js")
+						import("./_app/immutable/entry/start.CR1lkUpT.js"),
+						import("./_app/immutable/entry/app.CkRuD-Ac.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
