--- a/projects/rado-graph.html
+++ b/projects/rado-graph.html
@@ -20,13 +20,13 @@
     </script>
     
 		<link href="../_app/immutable/assets/0.PRcDW_11.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/9.DMRdq57i.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.B1nxiPn3.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BbMx9pL6.js">
+		<link href="../_app/immutable/assets/9.QtYdgiaF.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CR1lkUpT.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DkEGkgFV.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BD0GllUK.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.CkRuD-Ac.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DRudpjA4.js">
@@ -34,28 +34,27 @@
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.B_cDJ80w.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/C4BzMkYb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/9.D_gvo9C_.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/9.BvvA0Akd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/4LSGJv5n.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CBbuBPfZ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/C_Njmxhn.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BQs9fFl7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CU9W_vW1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BLLkLrlF.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--gygcht--><meta name="description" content="I got sucked down a Youtube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page."/><!----><title>Rado Graph — aaron</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-gygcht"><article class="page svelte-gygcht"><p class="eyebrow svelte-gygcht">project</p> <h1 class="svelte-gygcht">Rado Graph</h1> <div class="meta-row svelte-gygcht"><span class="status active svelte-gygcht">active</span> <span class="stack svelte-gygcht">WebGL • TypeScript • SvelteKit</span></div> <p class="lede svelte-gygcht">I got sucked down a Youtube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page.</p> <div class="body svelte-gygcht"><!--[--><p class="svelte-gygcht">An infinite-looking graph built from a deterministic pair-hash. Zoom out to melt your PC.</p><p class="svelte-gygcht">Im still trying to find an efficient way to render and generate this pseudo Rado graph. While keeping the whole generated graph deterministic.</p><!--]--></div> <!--[--><div class="embed svelte-gygcht"><!--[!--><div class="frame svelte-1s7z2zx"><div class="label svelte-1s7z2zx">Rado graph tiles (WebGL)</div> <div class="controls svelte-1s7z2zx"><label class="svelte-1s7z2zx">Tile nodes <input type="number" value="10" readonly class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Tile neighbors <input type="number" min="0" max="64" value="32" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Highlight hops <input type="number" min="0" max="10" value="1" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Node size <input type="number" min="1" max="40" value="15" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Edge thick <input type="number" min="1" max="40" value="2" class="svelte-1s7z2zx"/></label></div> <canvas class="canvas svelte-1s7z2zx" aria-label="Rado graph WebGL canvas"></canvas></div><!--]--><!----></div><!--]--></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-gygcht"><article class="page svelte-gygcht"><p class="eyebrow svelte-gygcht">project</p> <h1 class="svelte-gygcht">Rado Graph</h1> <p class="lede svelte-gygcht">I got sucked down a Youtube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page.</p> <div class="body svelte-gygcht"><!--[--><p class="svelte-gygcht">An infinite-looking graph built from a deterministic pair-hash. Zoom out to melt your PC.</p><p class="svelte-gygcht">Im still trying to find an efficient way to render and generate this pseudo Rado graph. While keeping the whole generated graph deterministic.</p><!--]--></div> <!--[--><div class="embed svelte-gygcht"><!--[!--><div class="frame svelte-1s7z2zx"><div class="label svelte-1s7z2zx">Rado graph tiles (WebGL)</div> <div class="controls svelte-1s7z2zx"><label class="svelte-1s7z2zx">Tile nodes <input type="number" value="10" readonly class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Tile neighbors <input type="number" min="0" max="64" value="32" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Highlight hops <input type="number" min="0" max="10" value="1" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Node size <input type="number" min="1" max="40" value="15" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Edge thick <input type="number" min="1" max="40" value="2" class="svelte-1s7z2zx"/></label></div> <canvas class="canvas svelte-1s7z2zx" aria-label="Rado graph WebGL canvas"></canvas></div><!--]--><!----></div><!--]--></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1tmmiv2 = {
+					__sveltekit_w0ydqp = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.B1nxiPn3.js"),
-						import("../_app/immutable/entry/app.BD0GllUK.js")
+						import("../_app/immutable/entry/start.CR1lkUpT.js"),
+						import("../_app/immutable/entry/app.CkRuD-Ac.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
