remove cringe chips

--- a/about.html
+++ b/about.html
@@ -19,19 +19,19 @@
       })();
     </script>
     
-		<link href="./_app/immutable/assets/0.PRcDW_11.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.BoM3YP60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CR1lkUpT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DkEGkgFV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CDZ79reu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dht_If32.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CkRuD-Ac.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.famF5JVS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Ch8EDPVd.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B_cDJ80w.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CNDqgEXG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C4BzMkYb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DrY8Ilyb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.Dx74Ikn5.js">
@@ -42,15 +42,15 @@
 			
 			<script>
 				{
-					__sveltekit_w0ydqp = {
+					__sveltekit_12xsok7 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CR1lkUpT.js"),
-						import("./_app/immutable/entry/app.CkRuD-Ac.js")
+						import("./_app/immutable/entry/start.CDZ79reu.js"),
+						import("./_app/immutable/entry/app.famF5JVS.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
