add descriptions to images

--- a/about.html
+++ b/about.html
@@ -21,36 +21,37 @@
     
 		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.BoM3YP60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CDZ79reu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dht_If32.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BWDkw6tb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DKEh1A9B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.famF5JVS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ch8EDPVd.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CNDqgEXG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C4BzMkYb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.Dx74Ikn5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CU9W_vW1.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--cwls5q--><meta name="description" content="About aaron."/><!----><title>aaron — about</title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/DYPmg0Nq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B6vfH90d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DJ2WkK10.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BWuTmBTb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/eTvpvohU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CZzCDLoH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DgURNtEw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.hyjZFeJ6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CVjgEMhP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B9oGTDYG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.BCn0UvTQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C37nXNnH.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--cwls5q--><meta name="description" content="About aaron."/><!----><title>aaron — about</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-cwls5q"><section class="page svelte-cwls5q"><p class="eyebrow svelte-cwls5q">about</p> <h1 class="svelte-cwls5q">Hi</h1> <p class="lede svelte-cwls5q">Im just another computer nerd with an interest in doing things the hard way.</p><div class="body svelte-cwls5q"><p class="svelte-cwls5q">Jack of many trades, master of none. I love learning about new technical concepts, digging in deep and then chasing the next rabbit down its hole. Over and over and over again.</p> <p class="svelte-cwls5q">I am self taught software engineer. Currently working as a forward deployed engineer for a small CH based RAG company. My day to day conists of building out AI tooling and back end solutions with our customers.</p> <p class="svelte-cwls5q">If you want to collaborate or compare notes, reach out anytime. I certainly have a lot to learn from you.</p></div></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-cwls5q"><section class="page svelte-cwls5q"><p class="eyebrow svelte-cwls5q">about</p> <h1 class="svelte-cwls5q">Hi</h1> <p class="lede svelte-cwls5q">Im just another computer nerd with an interest in doing things the hard way.</p> <div class="body svelte-cwls5q"><p class="svelte-cwls5q">Jack of many trades, master of none. I love learning about new technical concepts, digging in deep and then chasing the next rabbit down its hole. Over and over and over again.</p> <p class="svelte-cwls5q">I am self taught software engineer. Currently working as a forward deployed engineer for a small CH based RAG company. My day to day conists of building out AI tooling and back end solutions with our customers.</p> <p class="svelte-cwls5q">If you want to collaborate or compare notes, reach out anytime. I certainly have a lot to learn from you.</p></div></section></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_12xsok7 = {
+					__sveltekit_1ne1ere = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CDZ79reu.js"),
-						import("./_app/immutable/entry/app.famF5JVS.js")
+						import("./_app/immutable/entry/start.BWDkw6tb.js"),
+						import("./_app/immutable/entry/app.B6vfH90d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
