--- a/blog.html
+++ b/blog.html
@@ -21,22 +21,23 @@
     
 		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.D6GYBZ-e.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CDZ79reu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dht_If32.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D-MousY3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BWDkw6tb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DKEh1A9B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.famF5JVS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CwDrDYTj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CxIDBp6I.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DRudpjA4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ch8EDPVd.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CNDqgEXG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C4BzMkYb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.U_jNkOzV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CU9W_vW1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C_Njmxhn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DYPmg0Nq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B6vfH90d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DJ2WkK10.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BWuTmBTb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/eTvpvohU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CZzCDLoH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DgURNtEw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.hyjZFeJ6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CVjgEMhP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B9oGTDYG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.Cepr0OYU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C37nXNnH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dx6G3CPg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B08_qlop.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--u4k2t--><meta name="description" content="Writing and notes."/><!----><title>aaron — blog</title>
   </head>
   <body data-sveltekit-preload-data="hover">
@@ -44,15 +45,15 @@
 			
 			<script>
 				{
-					__sveltekit_12xsok7 = {
+					__sveltekit_1ne1ere = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CDZ79reu.js"),
-						import("./_app/immutable/entry/app.famF5JVS.js")
+						import("./_app/immutable/entry/start.BWDkw6tb.js"),
+						import("./_app/immutable/entry/app.B6vfH90d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
