--- a/gallery/000033490018.html
+++ b/gallery/000033490018.html
@@ -20,39 +20,40 @@
     </script>
     
 		<link href="../_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/7.DEVTp7SO.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.CDZ79reu.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Dht_If32.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/D-MousY3.js">
+		<link href="../_app/immutable/assets/7.D-T_bK3c.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.BWDkw6tb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DKEh1A9B.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BUApaBEI.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.famF5JVS.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CwDrDYTj.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CxIDBp6I.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DRudpjA4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Ch8EDPVd.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.CNDqgEXG.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/C4BzMkYb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/7.BRzXRbsm.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/D6NXfYRl.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DYPmg0Nq.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.B6vfH90d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DJ2WkK10.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BWuTmBTb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/eTvpvohU.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CZzCDLoH.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DgURNtEw.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.hyjZFeJ6.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CVjgEMhP.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/B9oGTDYG.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/7.DQt-SPPK.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CNxB99is.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CBbuBPfZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/B3ucIb0_.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--s6jaqj--><meta name="description" content="Gallery frame 000033490018."/><!----><title>Frame 000033490018 — aaron</title>
+		<link rel="modulepreload" href="../_app/immutable/chunks/fUai8UT4.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--s6jaqj--><meta name="description" content="Shot on Fujifilm Fujicolor 200."/><!----><title>Taking refuge from the sun — aaron</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-s6jaqj"><article class="page svelte-s6jaqj"><div class="header"><p class="eyebrow svelte-s6jaqj">gallery</p> <h1 class="svelte-s6jaqj">Frame 000033490018</h1> <p class="meta svelte-s6jaqj">Gallery frame 000033490018.</p></div> <div class="image-section"><div class="frame svelte-s6jaqj"><picture class="svelte-s6jaqj"><source type="image/avif" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw"/> <img src="/images/gallery/000033490018-1200.avif" alt="Gallery frame 000033490018." width="1200" height="795.3398058252427" loading="lazy" decoding="async" fetchpriority="low" style="aspect-ratio: 1.5087890625;" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw" class="svelte-s6jaqj"/> <span class="placeholder svelte-s6jaqj">image</span></picture></div> <p class="full svelte-s6jaqj"><a href="/images/gallery/000033490018.avif" rel="noreferrer" target="_blank" class="svelte-s6jaqj">Open full AVIF</a></p></div></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-s6jaqj"><article class="page svelte-s6jaqj"><div class="header"><p class="eyebrow svelte-s6jaqj">gallery</p> <h1 class="svelte-s6jaqj">Taking refuge from the sun</h1> <p class="meta svelte-s6jaqj">Shot on Fujifilm Fujicolor 200.</p></div> <div class="image-section svelte-s6jaqj"><div class="frame svelte-s6jaqj"><picture class="svelte-s6jaqj"><source type="image/avif" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw"/> <img src="/images/gallery/000033490018-1200.avif" alt="Shot on Fujifilm Fujicolor 200." width="1200" height="795.3398058252427" loading="lazy" decoding="async" fetchpriority="low" style="aspect-ratio: 1.5087890625;" srcset="/images/gallery/000033490018-400.avif 400w, /images/gallery/000033490018-800.avif 800w, /images/gallery/000033490018-1200.avif 1200w" sizes="(min-width: 1024px) 960px, (min-width: 640px) 90vw, 100vw" class="svelte-s6jaqj"/></picture></div> <p class="full svelte-s6jaqj"><a href="/images/gallery/000033490018.avif" rel="noreferrer" target="_blank" class="svelte-s6jaqj">Open full AVIF</a></p> <!--[--><p class="description svelte-s6jaqj">In some places existing is survival. In southern Utah during the peak of summer shade is sparse. The harshness of the climate has a certain terrifying beauty to it.</p><!--]--></div></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_12xsok7 = {
+					__sveltekit_1ne1ere = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.CDZ79reu.js"),
-						import("../_app/immutable/entry/app.famF5JVS.js")
+						import("../_app/immutable/entry/start.BWDkw6tb.js"),
+						import("../_app/immutable/entry/app.B6vfH90d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
