--- a/projects/rado-graph.html
+++ b/projects/rado-graph.html
@@ -21,40 +21,41 @@
     
 		<link href="../_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/9.QtYdgiaF.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.CDZ79reu.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Dht_If32.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/D-MousY3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.BWDkw6tb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DKEh1A9B.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BUApaBEI.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DPV4Hcwj.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.famF5JVS.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CwDrDYTj.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CxIDBp6I.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DRudpjA4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Ch8EDPVd.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.CNDqgEXG.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/C4BzMkYb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DrY8Ilyb.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/9.BvvA0Akd.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DYPmg0Nq.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.B6vfH90d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DJ2WkK10.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BWuTmBTb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/eTvpvohU.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CZzCDLoH.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DgURNtEw.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.hyjZFeJ6.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CVjgEMhP.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/B9oGTDYG.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/9.N22v7i-0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/4LSGJv5n.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CBbuBPfZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/C_Njmxhn.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CU9W_vW1.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BLLkLrlF.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--gygcht--><meta name="description" content="I got sucked down a Youtube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page."/><!----><title>Rado Graph — aaron</title>
+		<link rel="modulepreload" href="../_app/immutable/chunks/Dx6G3CPg.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/C37nXNnH.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CZzk7QHQ.js"><!--12qhfyh--><link rel="icon" href="/_app/immutable/assets/favicon.DUliVVFQ.png"/><!----><!--gygcht--><meta name="description" content="I got sucked down a Youtube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page."/><!----><title>Rado Graph — aaron</title>
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"><!--[--><!--[--><!----><header class="site-header svelte-12qhfyh"><a class="home-link svelte-12qhfyh" href="/">aaron</a> <button class="theme-toggle svelte-12qhfyh" type="button" aria-label="Toggle theme">Dark</button></header> <!----><main class="svelte-gygcht"><article class="page svelte-gygcht"><p class="eyebrow svelte-gygcht">project</p> <h1 class="svelte-gygcht">Rado Graph</h1> <p class="lede svelte-gygcht">I got sucked down a Youtube rabbit hole about Rado graphs by Matt Parker and wanted a little project to play with typescript on my personal page.</p> <div class="body svelte-gygcht"><!--[--><p class="svelte-gygcht">An infinite-looking graph built from a deterministic pair-hash. Zoom out to melt your PC.</p><p class="svelte-gygcht">Im still trying to find an efficient way to render and generate this pseudo Rado graph. While keeping the whole generated graph deterministic.</p><!--]--></div> <!--[--><div class="embed svelte-gygcht"><!--[!--><div class="frame svelte-1s7z2zx"><div class="label svelte-1s7z2zx">Rado graph tiles (WebGL)</div> <div class="controls svelte-1s7z2zx"><label class="svelte-1s7z2zx">Tile nodes <input type="number" value="10" readonly class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Tile neighbors <input type="number" min="0" max="64" value="32" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Highlight hops <input type="number" min="0" max="10" value="1" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Node size <input type="number" min="1" max="40" value="15" class="svelte-1s7z2zx"/></label> <label class="svelte-1s7z2zx">Edge thick <input type="number" min="1" max="40" value="2" class="svelte-1s7z2zx"/></label></div> <canvas class="canvas svelte-1s7z2zx" aria-label="Rado graph WebGL canvas"></canvas></div><!--]--><!----></div><!--]--></article></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_12xsok7 = {
+					__sveltekit_1ne1ere = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.CDZ79reu.js"),
-						import("../_app/immutable/entry/app.famF5JVS.js")
+						import("../_app/immutable/entry/start.BWDkw6tb.js"),
+						import("../_app/immutable/entry/app.B6vfH90d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
