add new gallery content

--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
     
 		<link href="./_app/immutable/assets/0.Bj-wn1wL.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.BoM3YP60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BWDkw6tb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DKEh1A9B.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C9y67-Tp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CuqHeiMq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKNTI6iC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DYPmg0Nq.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B6vfH90d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Ck573EC3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJ2WkK10.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWuTmBTb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/eTvpvohU.js">
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_1ne1ere = {
+					__sveltekit_9up9qq = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BWDkw6tb.js"),
-						import("./_app/immutable/entry/app.B6vfH90d.js")
+						import("./_app/immutable/entry/start.C9y67-Tp.js"),
+						import("./_app/immutable/entry/app.Ck573EC3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
